# ln-fundamentals

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ffi.yml
ffi/ffi-fundamentals/: Cargo.toml  pyproject.toml
ffi/ffi-fundamentals/src/: lib.rs
fundamentals/: Cargo.toml  README.md
fundamentals-derive/: Cargo.toml  README.md
fundamentals-derive/src/: lib.rs
fundamentals/src/: bitflag.rs  core.rs  lib.rs  primitives.rs  tlv.rs  types.rs
fundamentals/src/bolt/: bolt1.rs  bolt2.rs  bolt7.rs  bolt8.rs  mod.rs
fundamentals/tests/: test_types.rs
fundamentals/tests/test_vectors/: bigsize_decoding.json
python/: Makefile  README.md  pyproject.toml
python/lnspec_py/basic_type/: bitmask.py  hex_type.py  int.py  tvl_record.py
python/lnspec_py/message_type/: msg.py
python/lnspec_py/message_type/error/: __init__.py  error_msg.py
python/lnspec_py/message_type/init/: __init__.py  init_data.py  init_msg.py
python/lnspec_py/message_type/ping_pong/: __init__.py  ping_msg.py  pong_msg.py
python/tests/: test_bit_field.py  test_error_msg.py  test_hex_type.py  test_init_data.py  test_integers.py  test_ping_msg.py  test_pong_msg.py  test_tvl_record.py  utils.py
rust/: Cargo.toml
rust/lnspec/: Cargo.toml
rust/lnspec/src/: bolt1.rs  bolt7.rs  core.rs  lib.rs  primitives.rs  types.rs
rust/lnspec/src/bolt/: bolt7.rs
rust/lnspec_derive/: Cargo.toml
rust/lnspec_derive/src/: gen_impl.rs  lib.rs
rust/src/: core.rs  lib.rs  primitives.rs
specs/: Makefile  bolt1.csv  bolt2.csv  bolt4.csv
