[package]
name = "fundamentals"
version = "0.0.1-alpha.3"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
description = "Zero dependencies crate to provide fundamentals type to encode and decode lightning wire messages"
readme = "README.md"
homepage = "https://github.com/lnspec-tools/ln-fundamentals.git"
repository = "https://github.com/lnspec-tools/ln-fundamentals.git"
license = "MIT"

[dependencies]
fundamentals-derive = { version = "0.0.1-alpha.2" }
pyo3 = { version = "0.22", optional = true, features = [ "extension-module" ] }

[dev-dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
pyo3 = ["dep:pyo3"]