[package]
name = "ffi-fundamentals"
version = "0.0.1-alpha.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libfundamentals"
crate-type = ["cdylib"]

[dependencies]
fundamentals ={ path = "../../fundamentals", features = ["pyo3"] }
pyo3 = "0.22"