# See https://www.maturin.rs/tutorial
# pyproject.toml to configure PEP 518 build system requirements and enable the extension-module feature of pyo3.
[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = 'lnfundamentals'
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
